# poca

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5d6acc1bfbc9_initial.py  a1b2c3d4e5f6_posts_comments.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/lib/: animations.ts  api-client.ts  constants.ts  feed-queries.ts  queries.ts  utils.ts
frontend/src/stores/: index.ts
frontend/src/types/: index.ts
seed/: collect_places_overpass.py  seed_destinations.py
src/: main.py
src/api/: deps.py
src/api/v1/: ai_conversation.py  destinations.py  gamification.py  map.py  places.py  posts.py  recommendations.py  reviews.py  trips.py  users.py
src/core/: config.py  database.py  dependencies.py  locations.py  redis.py
src/domain/models/: __init__.py  conversation.py  destination.py  gamification.py  post.py  review.py  trip.py  user.py
src/domain/schemas/: __init__.py  conversation.py  destination.py  gamification.py  post.py  review.py  trip.py  user.py
src/repositories/: conversation_repo.py  destination_repo.py  gamification_repo.py  post_repo.py  review_repo.py  trip_repo.py  user_repo.py
src/services/: ai_conversation_service.py  budget_service.py  destination_service.py  gamification_service.py  google_places_service.py  plan_service.py  recommendation_service.py  review_service.py  review_summary_service.py  trip_planner_service.py
tests/: test_api.py
(+25 files in other folders)
